sa-jdi updates
Signed-off-by: aavarghese <avarghese@us.ibm.com>